--- a/rust_invoker/Cargo.toml
+++ b/rust_invoker/Cargo.toml
@@ -19,4 +19,5 @@ authors = ["Glyn Normington <gnormington@pivotal.io>"]
 
 [dependencies]
 function_types = { path = "../function_types" }
+iron = "0.6.*"
 libloading = "0.5.0"
