--- a/rust_invoker/Cargo.toml
+++ b/rust_invoker/Cargo.toml
@@ -19,5 +19,7 @@ authors = ["Glyn Normington <gnormington@pivotal.io>"]
 
 [dependencies]
 function_types = { path = "../function_types" }
-iron = "0.6.*"
+futures="0.1.23"
+futures-core="*"
+hyper = "0.12"
 libloading = "0.5.0"
